Added Release workflow

--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -59,7 +59,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: noevidenz/multipaper-master
+          tags: noevidenz/multipaper-master:edge
           target: master
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           cache-from: |
@@ -74,7 +74,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: noevidenz/multipaper
+          tags: noevidenz/multipaper:edge
           target: server
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           cache-from: |
