--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -1,4 +1,4 @@
-name: Build images
+name: Build Image (edge)
 
 on:
   schedule:
@@ -7,6 +7,7 @@ on:
 
 jobs:
   buildx:
+    name: Build  Image (edge)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
