--- a/.github/workflows/build-releases.yaml
+++ b/.github/workflows/build-releases.yaml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build_1-19:
+    name: Build Release 1.19
     uses: ./.github/workflows/build-release.yaml
     with:
       version: 1.19
@@ -15,9 +16,10 @@ jobs:
     secrets: inherit
 
   build_1-18:
+    name: Build release 1.18
     uses: ./.github/workflows/build-release.yaml
     with:
-      version: 1.19
+      version: 1.18
       master_tags: noevidenz/multipaper-master:1.18
       server_tags: noevidenz/multipaper:1.18
     secrets: inherit
