--- a/.github/workflows/build-releases.yaml
+++ b/.github/workflows/build-releases.yaml
@@ -1,8 +1,8 @@
 name: Build from Releases
 
 on:
-#  schedule:
-#    - cron: '0 14 * * *' # Midnight AEST
+  schedule:
+    - cron: '0 14 * * *' # Midnight AEST
   workflow_dispatch:
 
 jobs:
