--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -14,3 +14,9 @@ updates:
     directory: "/releases" # Location of package manifests
     schedule:
       interval: "daily"
+
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      # Check for updates to GitHub Actions every week
+      interval: "weekly"
